# First-Person-Game

./: CMakeLists.txt  extra_info.txt
cmake/: LinkASSIMP.cmake
includes/: Camera.h  Color.h  Cube.h  Enemy.h  Game.h  Math_Utils.h  Physics_Engine.h  Player.h  Projectile.h  Renderer.h  Shader.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
source/: Camera.cpp  Cube.cpp  Enemy.cpp  Game.cpp  Math_Utils.cpp  Physics_Engine.cpp  Player.cpp  Projectile.cpp  Renderer.cpp  Shader.cpp  main.cpp
test_playground/Binary_Serialisation/: Serialize.cpp  Serialize.h  TestObject.cpp  TestObject.h  command.sh  main.cpp  output.txt
test_playground/FindClosest/: FindClosest.cpp
test_playground/Multiplayer/: Client.cpp  Server.cpp  runClient.sh  runServer.sh
test_playground/PathFinding(A star)/: AStar.cpp  AStar.h  cat.sh  example_output.txt  main.cpp  output.txt  run.sh
